Salesforce/main/default/main/default/objects/API_Counter__c/API_Counter__c.object-meta.xml
<CustomObject>
    <description>Objeto para contabilizar la consumicion de un Web Service</description>
    <label>API Counter</label>
    <nameField>
        <label>Nombre de API Counter</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Counters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>