Salesforce/main/default/main/default/objects/API_Counter__c/fields/Finishing_Date__c.field-meta.xml
<CustomField>
    <fullName>Finishing_Date__c</fullName>
    <description>Fecha final del rango que cubre este registro</description>
    <label>Finishing Date</label>
    <type>Date</type>
</CustomField>