Salesforce/main/default/main/default/objects/API_Counter__c/fields/Nomenclature__c.field-meta.xml
<CustomField>
    <fullName>Nomenclature__c</fullName>
    <description>Este nombre servirá para diferenciar rápidamente el rango de fechas y API a contabilizar. Se generara automáticamente</description>
    <externalId>true</externalId>
    <label>Nomenclature</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>