Salesforce/main/default/main/default/objects/API_Counter__c/fields/Requests_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requests_Amount__c</fullName>
    <description>Cantidad de solicitudes consumidas</description>
    <label>Requests Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>