Salesforce/main/default/main/default/objects/API_Counter__c/fields/Starting_Date__c.field-meta.xml
<CustomField>
    <fullName>Starting_Date__c</fullName>
    <description>Fecha de inicio del rango que cubre este registro</description>
    <label>Starting Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>